examples/inheritance/H.shex
abstract <A>           /sA.........$/
                   and
                       { <p> [0 1 2 3 4 5 6 7 8 9]+}
abstract <B>-@<A>      /s.B........$/
                   and
                       { <p> [0 1   3 4 5 6 7 8 9]+}
         <C>           /s..C.......$/
                   and
                       { <p> [0 1 2   4 5 6 7 8 9]+}
abstract <D>-@<B>-@<C> /s...D......$/
                   and
                       { <p> [0 1 2 3   5 6 7 8 9]+}
abstract <E>           /s....E.....$/
                   and&@<D>
                       { <p> [    2              ] }
         <F>           /s.....F....$/
                   and
                       { <p> [      3            ] }
abstract <G>           /s......G...$/
                   and&@<E>&@<F>
                       { <p> [        4          ] }
         <H>-@<G>      /s.......H..$/
                   and
                       { <p> [0 1 2 3 4 5     8 9]*}

# A: 0 1 2 3 4 5 6 7 8 9+                         
# B: 0 1   3 4 5 6 7 8 9+                         
# C:       -            +                         
# D: 0 1       5 6 7 8 9+                         
# E: 0 1 +     5 6 7 8 9+, p:2                    
# F:       +               p:3                    
# G: 0 1     + 5 6 7 8 9+, p:2, p:3, p:4          
# H: 0 1       5     8 9+, p:2, p:3, p:4          
